<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_comment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_comment"
        app:showAsAction="ifRoom"
        android:title="@string/comment" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="collapseActionView"
        android:title="@string/share_link" />

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="102"
        android:icon="@drawable/ic_menu_favorite_border"
        app:showAsAction="collapseActionView"
        android:title="@string/favorite" />
</menu>