<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_comment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_comment"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <group
        android:id="@+id/menu_category_home"
        android:checkableBehavior="single"
        android:orderInCategory="101">
        <item
            android:id="@+id/action_default_order"
            android:orderInCategory="200"
            android:title="@string/default_order_topics"
            app:showAsAction="never"
            android:checked="true" />

        <item
            android:id="@+id/action_latest"
            android:orderInCategory="201"
            android:title="@string/latest_topics"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_elite"
            android:orderInCategory="202"
            android:title="@string/elite_topics"
            app:showAsAction="never" />
    </group>
</menu>
